Alinhamento Centralizado Botão Cadastre-se

--- a/estilo.css
+++ b/estilo.css
@@ -205,7 +205,7 @@ select:last-child {
    
     /* margin: 20px 0 25px 25%; */
    
-    display: inline-flex;
+    /* display: inline-flex; */
     margin: 20px auto;  
 }
 
